@@ -31,6 +31,7 @@ http://svn.edgewall.org/repos/genshi/tags/0.4.0/
    to strings and file-like objects (ticket #69).
  * Improve handling of incorrectly nested tags in the HTML parser.
  * The builder API now accepts streams as children of elements and fragments.
+ * Template includes can you be nested inside fallback content.
 
 
 Version 0.3.5
